# towelie

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  publish.yml
src/rv/: app.py
src/rv/static/: bundle.js
src/rv/templates/: index.html
src/towelie/: api.py  api_models.py  app.py  cli.py  models.py  options.py  project.py
src/towelie/static/: bundle.js  input.css  main.js  output.css
src/towelie/templates/: base.html  icons.html  index.html  options.html
src/towelie/tui/: app.py
web/src/: api.ts  comment.css  options.ts
web/src/controllers/: checks_controller.ts  options_controller.ts  review_controller.ts
