[project]
name = "towelie"
version = "0.1.11"
description = "Local code review for AI agents"
readme = "README.md"
authors = [
    { name = "Glyphack", email = "sh.hooshyari@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.128",
    "jinja2~=3.1",
    "textual-diff-view>=0.1.3",
    "tree-sitter~=0.22",
    "uvicorn~=0.40",
]

[project.scripts]
towelie = "towelie.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "prek>=0.3.2",
    "py-spy>=0.4.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.11",
    "textual-dev>=1.8.0",
    "ty>=0.0.31",
]

[tool.pyright]
ignore = ["scratch/", "dist/"]

[tool.ruff]
target-version = "py313"
exclude = ["investigate/", ".venv"]

[tool.ruff.lint]
select = [
    "F", "E", "W", "B", "S", "UP", "ASYNC", "C4", "SIM",
    "PERF", "RUF", "PGH", "ISC", "T10", "DTZ", "RSE",
    "FURB", "PL", "LOG", "FA", "TC", "SLOT",
]
ignore = [
    "S101",    # assert is fine for internal invariants
    "S105",    # false positive on StrEnum values like PASS = "pass"
    "S110",    # try-except-pass is intentional in some UI code
    "S310",    # urlopen on localhost is safe
    "S607",    # partial executable paths are fine for dev tooling
    "PLC0415", # lazy imports are intentional (uvicorn, tui)
    "PLW0603", # global statement used for app context singleton
    "PLR1714", # merged comparisons hurt readability here
    "PLR2004", # magic values are fine for simple comparisons
    "RUF012",  # mutable class defaults are idiomatic in Textual
    "SLF001",  # private member access needed for textual internals
    "PGH003",  # I'm using ty
]
